Revision history for {{ $dist->name }}

{{ $NEXT }}

0.006     2020-01-17 23:54:21+09:00 Asia/Seoul
    - seoul-2020-1 쿠폰 지원 (https://github.com/opencloset/opencloset/issues/1646)

0.005     2019-01-15 12:54:32+09:00 Asia/Seoul
    - seoul-2019-1 쿠폰 지원 (#10)
    - 불필요한 subroutiune 제거

0.004     2018-12-18 20:53:43+09:00 Asia/Seoul
    - 쿠폰을 발급할때에 event 를 연결 (#8)

0.003     2018-02-19 05:56:23+09:00 Asia/Seoul
    - seoul-2018-1 쿠폰 지원 (#6)

0.002     2017-08-23 14:25:46+09:00 Asia/Seoul
    - 서울시 담당 주무관 연락처 변경 (#1)
    - 4001, 4002, 4003 오류가 발생 시 취업날개 개인 정보 내용으로 갱신함 (#1)

0.001     2017-06-09 13:40:48+09:00 Asia/Seoul
    - 5002 오류 발생 시 취업날개 개인 정보 내용으로 갱신함 (#1)
    - first release (alpha release 1)